--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "16.0.1",
     "react-modal": "^3.11.2",
     "react-router-dom": "4.2.2",
+    "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "validator": "^13.1.17",
